# bee-swarm-simulator-helper

./: CMakeLists.txt  README.md
bee-swarm-simulator-helper/src/: __init__.py  bee_api.py  field_analyzer.py  player_data.py
bee-swarm-simulator-helper/tests/: test_player_data.py
src/: autofarm.cpp  autofarm.h  main.cpp  utils.cpp  utils.h
tests/: test_utils.cpp
